# codeacademy-example-project-1

./: README.md  pyproject.toml
proj/: model.py
tests/: test_model.py
