[tool.poetry]
name = "proj"
version = "0.1.0"
description = "An example of how the practical assignemnt no. 1 in CodeAcademy AI course could have been solved."
authors = ["Foxicution <foxicuiton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
