[tool.poetry]
name = "proj"
version = "0.1.0"
description = "An example of how the practical assignemnt no. 1 in CodeAcademy AI course could have been solved."
authors = ["Foxicution <foxicuiton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
